--- a/task-02.html
+++ b/task-02.html
@@ -5,41 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 2</title>
-    <style>
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        background-color: #fff;
-        color: #424242;
-        line-height: 1.5;
-        
-      }
-      .gallery {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.gallery-item {
-  flex: 1 1 calc(33.333% - 10px);
-  box-sizing: border-box;
-}
-
-.gallery-image {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-    </style>
+    <link rel="stylesheet" href="./css/common.css" />
   </head>
   <body>
-    <p><a href="index.html">Main</a></p>
+    <p><a href="./index.html">Go back</a></p>
 
     <ul class="gallery"></ul>
 
-    <script src="./js/task-02.js" type="module"></script>
+    <script src="./js/task-2.js" type="module"></script>
   </body>
 </html>
